Added some unit tests for settings UOW.

--- a/OysterCard/OysterCard.UnitTests/OysterCard.UnitTests.csproj
+++ b/OysterCard/OysterCard.UnitTests/OysterCard.UnitTests.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\OysterCard.Core\OysterCard.Core.csproj" />
+    <ProjectReference Include="..\OysterCard.Persistence\OysterCard.Persistence.csproj" />
   </ItemGroup>
 
 </Project>
